<?xml version="1.0"?>
<package format="2">
  <name>cansend_generator</name>
  <version>0.0.0</version>
  <description>The cansend_generator package</description>

  <maintainer email="anditya.sridamar.p@kangwon.ac.kr">Dito Damaru</maintainer>

  <license>BSDv3</license>

  <author email="anditya.sridamar.p@kangwon.ac.kr">Dito Damaru</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>roscpp</depend> <!-- Add roscpp as a dependency for C++ nodes -->

  <export>
  </export>
</package>
